--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,40 @@
-.git
-logs
-rebel.xml
 target/
 !.mvn/wrapper/maven-wrapper.jar
-log.path_IS_UNDEFINED
-.DS_Store
-offline_user.md
+!**/src/main/**/target/
+!**/src/test/**/target/
+server_log.*
+dump.rdb
 
-### STS ###
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
 .apt_generated
 .classpath
 .factorypath
 .project
 .settings
 .springBeans
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+.sts4-cache
 
 ### NetBeans ###
-nbproject/private/
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-generatorConfig.xml
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### nacos ###
-third-party/nacos/derby.log
-third-party/nacos/data/
-third-party/nacos/work/
+### VS Code ###
+.vscode/
 
-file/
+### Mac OS ###
